# Python_basics

./: README.md  agent.log_2  agent_config.json  agent_memory.json  pyproject.toml  settings.json  test.py
Lesson_6/: les_6.py
ai_chat_bot/: chat_history.json  config.json  main.py  pyproject.toml  test_agent_run.py  test_utils.py
ai_chat_bot/src/: agent.py  utils.py
ai_chat_bot/tests/: test_agent.py
lesson_1/: home_work_1.py  les_1.py
lesson_10/: agent_manager.py  ai_basic.py  ai_basic_norm.py  ai_basic_super.py  history.json  test_manager.py
lesson_2/: home_work_2.py  les_2.py
lesson_3/: home_work_3.py  les_3.py
lesson_4/: home_work_4.py  les_4.py
lesson_5/: home_work_5.py  les_5.py
lesson_6/: home_work_6.py  les_6.py
lesson_7/: home_work_7.py  les_7.py
lesson_8/: agent_data.json  home_work_8.py  home_work_8_2.py  home_work_8_3.py  home_work_8_4.py  les_8.py  les_8_1.py  les_8_2.py  users.json
lesson_9/: agent_class.py  comprehensions.py  decorators.py  home_work_9.py  home_work_9_1.py  home_work_9_2.py  main.py  utils.py
week01/: age_calculator.py  mood_switch.py
week01 # Переменные/: visiting_card.py
week02/: door_quest.py  grade_calculator.py  login_check.py  temp_advisor.py
week02 # Условия (if, elif, else)/: grade_calculator.py  weather_advisor.py
week03/: guess_game.py  iterate_list.py  multiplication_table.py  sum_calculator.py
week04/: currency_converter.py
week04 # Функции (def, print vs return)/: function.py  greeting_generator.py  password_checker.py
week05 # Списки и словари (list, dict)/: chat_history.py
(+11 files in other folders)
