[tool.poetry]
name = "ai-chat-bot"
version = "0.1.0"
description = "AI Chat Bot with persistent memory and logging"
authors = ["TikhonovAS <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"